# tda-witness

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: circle_barcode.html  circle_betti_summary.html  circle_complex.html  circle_filtration.html  circle_persistence_diagram.html  mnist_digit_0.html  mnist_digit_1.html  mnist_digit_8.html  mnist_topology.ipynb  sample_barcode.html  sample_complex.html  sample_persistence_diagram.html  tda_witness_demo.ipynb
examples/data/: sample_13pts.csv
examples/data/mnist/: digit_0.csv  digit_1.csv  digit_2.csv  digit_3.csv  digit_3_img.npy  digit_4.csv  digit_4_img.npy  digit_5.csv  digit_5_img.npy  digit_6.csv  digit_6_img.npy  digit_7.csv  digit_8.csv  digit_8_img.npy  digit_9.csv  digit_9_img.npy
src/tda/: __init__.py  __main__.py  cli.py  datasets.py  preprocessing.py
src/tda/complex/: __init__.py  filtration.py  vietoris_rips.py  witness.py
src/tda/homology/: __init__.py  betti.py  boundary.py  persistence.py  smith_normal_form.py
src/tda/visualization/: __init__.py  plotly_viz.py
tests/: conftest.py  test_betti.py  test_boundary.py  test_filtration.py  test_integration.py  test_persistence.py  test_preprocessing.py  test_snf.py  test_vietoris_rips.py  test_witness.py
